tests/baselines/reference/bigint-numeric-separator-literal-dds-nsl-dds-dunder-err.errors.txt
bigint-numeric-separator-literal-dds-nsl-dds-dunder-err.ts(35,4): error TS6189: Multiple consecutive numeric separators are not permitted.


==== bigint-numeric-separator-literal-dds-nsl-dds-dunder-err.ts (1 errors) ====
    // Copyright (C) 2019 Leo Balter. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-NumericLiteralSeparator
    description: >
      NumericLiteralSeparator may not appear adjacent to another
      NumericLiteralSeparator in DecimalIntegerLiteral
    info: |
      NumericLiteral ::
        DecimalIntegerLiteral BigIntLiteralSuffix
        NumericLiteralBase BigIntLiteralSuffix
    
      NumericLiteralBase ::
        BinaryIntegerLiteral
        OctalIntegerLiteral
        HexIntegerLiteral
    
      BigIntLiteralSuffix :: n
    
      NumericLiteralSeparator ::
        _
    
      DecimalIntegerLiteral ::
        ...
        NonZeroDigit NumericLiteralSeparator_opt DecimalDigits
    
    negative:
      phase: parse
      type: SyntaxError
    features: [BigInt, numeric-separator-literal]
    ---*/
    
    
    10__0123456789n;
       ~
!!! error TS6189: Multiple consecutive numeric separators are not permitted.
    